test_regress/t/t_vlt_syntax_bad.out
%Error: t/t_vlt_syntax_bad.vlt:9:20: sensitivity not expected for attribute
    9 | public -module "t" @(posedge clk)
      |                    ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_vlt_syntax_bad.vlt:11:1: Argument -match only supported for lint_off
   11 | tracing_off --file "*" -match "nothing"
      | ^~~~~~~~~~~
%Error: t/t_vlt_syntax_bad.vlt:13:1: Argument -scope only supported for tracing_on/off
   13 | lint_off --rule UNOPTFLAT -scope "top*"
      | ^~~~~~~~
%Error: t/t_vlt_syntax_bad.vlt:14:1: Argument -scope only supported for tracing_on/off_off
   14 | lint_off --rule UNOPTFLAT -scope "top*" -levels 0
      | ^~~~~~~~
%Error: t/t_vlt_syntax_bad.vlt:15:1: Argument -scope only supported for tracing_on/off
   15 | lint_on --rule UNOPTFLAT -scope "top*"
      | ^~~~~~~
%Error: t/t_vlt_syntax_bad.vlt:16:1: Argument -scope only supported for tracing_on/off_off
   16 | lint_on --rule UNOPTFLAT -scope "top*" -levels 0
      | ^~~~~~~
%Error: t/t_vlt_syntax_bad.vlt:18:1: forceable missing -module
   18 | forceable -module "" -var "net_*"
      | ^~~~~~~~~
%Error: t/t_vlt_syntax_bad.vlt:20:1: missing -var
   20 | forceable -module "top" -var ""
      | ^~~~~~~~~
%Error: Exiting due to
